
WhiteCore-Sim (Dev) 
Rowan D <greythane@gmail.com>
Fly-Man- <fly.man.opensim@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Mar 24 - Greythane
* Dropped Xml2 commands after further investigation, OAR's are a better alternative and it does not
    appear that the XML2 format is in common use with OpenSim anyway
* SceneManager 
    - Re-synced new Region commmads after a stuff up in doing so previously
    - Add port to 'Show regions' command
* FileBasedSimulationData
    - Correct some problems in the 'update region info' command


Mar 24 - Fly-Man
* Correction to server configuration files

Mar 22nd - Greythane
*  Corrected setting of default values when no regions exist at startup

Mar 21st - Greythane
* CommandConsole
  - Add 'missed that..' response for multi word commands
* Update prebuild.xml version # to 0.9
* PathHelpers
  - Add VerifyReadFile to shortcut a heap of file checks (reading config, xml etc)
* SceneManger
  - Correct/update/rework CreateNewRegion when a region name and/or a config file is specified


Mar 20th - Greythane
* CommandConsole
  - Add a warning message if a valid command requires a scene and none is selected
* SceneManager
  - SavePrimsXml2 - revamp command and simplify code
  - SaveXML2 - revamp and simplify code
* PathHelpers
  - Add VerifySaveFile to shortcut a heap of file checks (saving config, xml etc)


Mar 19th - Greythane
* SceneManager
  - Additional options for the 'create region' command
	- Specify a region name as part of the command
	- specify a configuration file, containing the region details, to load
  - New command "save region config <filename>" used to save existing configurations to an xml file
 
   
Mar 18th - Greythane
* SceneManager -  additional XML2 commands
	- load xml2 - load an xlm2 format file
	- save xml2 - save current region as an xml2 file
	- save prims xml2 - save a named prim as an xml2 file
* FileBasedSimulationData - Add some 'smarts' when creating a new region. 